# info-oge

./: pyproject.toml
info_oge/five/: __init__.py  example.py
info_oge/four/: __init__.py  example.py
info_oge/gpt/: __init__.py
info_oge/one/: __init__.py
info_oge/six/: __init__.py  example.py
